[package]
name = "remote-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2.4.0"
evdev = { version = "0.12.1" , features = ["serde"] }
libc = "0.2.142"
postcard = "1.0.4"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
